[package]
name = "bpf-program-template"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
arrayref = "0.3.6"
solana-program = "1.6.9"
spl-associated-token-account = "1.0.2"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
thiserror = "1.0.24"

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "1.6.2"
solana-sdk = "1.6.2"

[lib]
crate-type = ["cdylib", "lib"]
